[tool.poetry]
name = "pypixiv"
version = "0.0.1"
description = "python pixiv api wrapper"
authors = [
    "DeltaLaboratory <delta@deltalab.dev>"
]

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.9.0"
httpx = "^0.22.0"
h2 = "^4.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
mypy = "^0.950"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
