[tool.poetry]
name = "pypixiv"
version = "0.0.1"
description = "python pixiv api wrapper"
authors = [
    "DeltaLaboratory <delta@deltalab.dev>"
]

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^1.9.2"
httpx = "^0.23.0"
h2 = "^4.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
